# tree-sitter-python

./: .editorconfig  .gitignore  CMakeLists.txt  Cargo.toml  MANIFEST.in  Makefile  Package.swift  README.md  SECURITY.md  binding.gyp  cabal.project  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  python.cabal  setup.py  test.mojo  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  publish.yml
bindings/c/: tree-sitter-mojo.h  tree-sitter-mojo.pc.in  tree-sitter-python.h  tree-sitter-python.pc.in  tree-sitter.h.in  tree-sitter.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_mojo/: binding.c
bindings/python/tree_sitter_python/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs  scanner.rs
bindings/swift/TreeSitterMojo/: mojo.h
bindings/swift/TreeSitterPython/: python.h
bindings/swift/TreeSitterPythonTests/: TreeSitterPythonTests.swift
corpus/: expressions.txt  literals.txt  statements.txt
python.dylib.dSYM/Contents/: Info.plist
python.dylib.dSYM/Contents/Resources/Relocations/aarch64/: python.dylib.yml
queries/: highlights.scm  indents.scm  locals.scm  overrides.scm  tags.scm
rust-tester/: Cargo.toml  README.md
rust-tester/src/: main.rs  tests.rs
script/: parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
src/tree_sitter/: parser.h
test/corpus/: a.txt  errors.txt  expressions.txt  literals.txt  pattern_matching.txt  statements.txt
test/highlight/: keywords.py
test/tags/: main.mojo
